--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
